# BridgeVision

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
application/: main.cpp
cmake/: FindDependencies.cmake
core/: CMakeLists.txt  frameProcessor.cpp  frameProcessor.h  iLink.h
core/ui/: mainWindow.cpp  mainWindow.h
core/utils/: detectionsDrawer.cpp  detectionsDrawer.h  imageConverter.cpp  imageConverter.h  overlayRenderer.cpp  overlayRenderer.h
net/: CMakeLists.txt  udpLink.cpp  udpLink.h
resources/: resources.qrc
src/core/: videoPlayer.cpp  videoPlayer.h
src/ui/: mainWindow.cpp  mainWindow.h  mainWindow.ui
src/utils/: detectionsDrawer.cpp  detectionsDrawer.h  imageConverter.h
